tests/lang/compile_fail/else_if.expo
fn main
  x = 5
  if x > 10
    print("big")
  else if x > 3
    print("medium")
  else
    print("small")
  end
  end
end
